--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="A Alessa é uma chatbot criada com o objetivo de ajudar você a se sentir melhor, ouvindo seus problemas e tentando te motivar a seguir em frente.">
+  <meta name="author" content="Victor Hermes">
 
   <title>Converse com a Alessa</title>
 
